--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -150,12 +150,12 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\RdvMetaData.cs" />
-    <Compile Include="Models\RdvRepository.cs" />
     <Compile Include="Models\Seance.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SeanceMetaData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\SeanceRdv.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\GestionPhotoImmobilier.mdf" />
