--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -155,6 +155,7 @@
     </Compile>
     <Compile Include="Models\SeanceMetaData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegleDaffaire\DateEntreUnEt15JoursPlusTard.cs" />
     <Compile Include="ViewModels\SeanceRdv.cs" />
   </ItemGroup>
   <ItemGroup>
