--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -228,6 +228,7 @@
     <Content Include="Views\Rdvs\Details.cshtml" />
     <Content Include="Views\Rdvs\Edit.cshtml" />
     <Content Include="Views\Rdvs\Index.cshtml" />
+    <Content Include="Views\Shared\SeanceFuture.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
