--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -125,12 +125,14 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AgencesController.cs" />
     <Compile Include="Controllers\AgentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PhotosController.cs" />
     <Compile Include="Controllers\ProprietesController.cs" />
     <Compile Include="Controllers\RdvsController.cs" />
     <Compile Include="Controllers\SeancesController.cs" />
+    <Compile Include="DAL\AgenceRepository.cs" />
     <Compile Include="DAL\AgentRepository.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
     <Compile Include="DAL\IGenericRepository.cs" />
@@ -281,6 +283,11 @@
     <Content Include="Views\Seances\_InfoAgent.cshtml" />
     <Content Include="Views\Seances\_InfoPhotographe.cshtml" />
     <Content Include="Views\Seances\_InfoSeanceRdv.cshtml" />
+    <Content Include="Views\Agences\Create.cshtml" />
+    <Content Include="Views\Agences\Delete.cshtml" />
+    <Content Include="Views\Agences\Details.cshtml" />
+    <Content Include="Views\Agences\Edit.cshtml" />
+    <Content Include="Views\Agences\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
