Corrections des vues pour Forfait

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -126,6 +126,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AgentsController.cs" />
+    <Compile Include="Controllers\ForfaitsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PhotosController.cs" />
     <Compile Include="Controllers\ProprietesController.cs" />
@@ -281,6 +282,11 @@
     <Content Include="Views\Seances\_InfoAgent.cshtml" />
     <Content Include="Views\Seances\_InfoPhotographe.cshtml" />
     <Content Include="Views\Seances\_InfoSeanceRdv.cshtml" />
+    <Content Include="Views\Forfaits\Create.cshtml" />
+    <Content Include="Views\Forfaits\Delete.cshtml" />
+    <Content Include="Views\Forfaits\Details.cshtml" />
+    <Content Include="Views\Forfaits\Edit.cshtml" />
+    <Content Include="Views\Forfaits\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
