--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Web.config
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Web.config
@@ -13,6 +13,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--A changer pour votre username DONT FORGET :D-->
+    <add key="monUserName" value="Laboratoire\1252991"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
