--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -188,6 +188,21 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SeanceMetaData.cs" />
+    <Compile Include="Models\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_helpdiagrams_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\usp_ProduireRapportAgence_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\usp_ProduireRapportAgent_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\view_VueEnsembleAgence.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegleDaffaire\AgenceValidation.cs" />
     <Compile Include="RegleDaffaire\DateEntreUnEt15JoursPlusTard.cs" />
@@ -195,6 +210,7 @@
     <Compile Include="RegleDaffaire\RDVUnique.cs" />
     <Compile Include="RegleDaffaire\Validation4hEntreRendezVous.cs" />
     <Compile Include="RegleDaffaire\SeanceValidation.cs" />
+    <Compile Include="ViewModels\AgentRapport.cs" />
     <Compile Include="ViewModels\SeanceForfait.cs" />
     <Compile Include="ViewModels\SeanceRdv.cs" />
     <Compile Include="ViewModels\SommairePhoto.cs" />
@@ -308,6 +324,8 @@
     <Content Include="Views\Forfaits\Index.cshtml" />
     <Content Include="Views\Seances\_GalleriePhoto.cshtml" />
     <Content Include="Views\Seances\Extra.cshtml" />
+    <Content Include="Views\Agences\Rapport.cshtml" />
+    <Content Include="Views\Agences\_RapportAgence.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
