Zip and download works :ab:

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Web.config
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Web.config
@@ -14,7 +14,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--A changer pour votre username DONT FORGET :D-->
-    <add key="JoeUsername" value="Jonathan\Jonathan" />
+    <add key="WillUserName" value="Laboratoire\1252991" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
