--- a/ZipManager/ZipManager/Web.config
+++ b/ZipManager/ZipManager/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="WillUserName" value="Wilomgfx\William"/>
+    <add key="WillUserName" value="Laboratoire\1252991"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
