Correction de francais

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/Web.config
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/Web.config
@@ -15,6 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--A changer pour votre username DONT FORGET :D-->
     <add key="WillUserName" value="Laboratoire\1252991" />
+    <add key="JoelUserName" value="Laboratoire\1387434"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
