Fix de derniere minute

--- a/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
+++ b/GestionPhotoImmobilier/GestionPhotoImmobilier/GestionPhotoImmobilier.csproj
@@ -338,6 +338,7 @@
     <Content Include="Views\Seances\Confirmer.cshtml" />
     <Content Include="Views\Seances\Facturer.cshtml" />
     <Content Include="Views\Rdvs\CreateSansInfos.cshtml" />
+    <Content Include="Views\Seances\PhotosPrises.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
